--- a/index.html
+++ b/index.html
@@ -6,59 +6,58 @@
 <title>ChadiliZe — Telegram Mini App</title>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <style>
-/* Tweak this to match the height of your bottom button area (e.g., the row with "Get Rewards"). */
-:root {
-  --bottom-bar: 152px;           /* ← adjust if your bottom area is taller/shorter */
-  --icon-size: 72px;             /* icon diameter; adjust if needed */
-  --focus-ring: 0 0 0 3px rgba(255, 214, 10, 0.85);
+:root{
+  /* Height of your fixed bottom row (buttons like "Get Rewards"). Tweak to your UI. */
+  --bottom-bar: 150px;
+
+  /* Padding inside the available area so the rectangle doesn't hug the edges. */
+  --panel-pad: 12px;
+
+  /* Icon size sitting on top of the rectangle. */
+  --icon-size: 72px;
+
+  /* Focus ring for accessibility. */
+  --focus-ring: 0 0 0 3px rgba(255,214,10,0.85);
 }
 
-* { box-sizing: border-box; }
-
-html, body {
-  height: 100%;
-  margin: 0;
-  background: #0b0b0f; /* match your app */
-  color: #eee;
-  font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-}
-
-/* The stage fills the screen EXCEPT the bottom bar area; the rectangle is
-   centered *in that space* and won’t have anything above or below it here. */
-.stage {
+/* Full-screen slot ABOVE the bottom row, always visible. */
+.chad-panel-slot{
   position: fixed;
-  /* respect notches / system bars */
-  left: env(safe-area-inset-left);
-  right: env(safe-area-inset-right);
-  top: env(safe-area-inset-top);
-  bottom: calc(var(--bottom-bar) + env(safe-area-inset-bottom));
+  /* keep clear of notches/system UI and bottom row */
+  inset: env(safe-area-inset-top) env(safe-area-inset-right)
+         calc(var(--bottom-bar) + env(safe-area-inset-bottom))
+         env(safe-area-inset-left);
   display: grid;
-  place-items: center; /* center horizontally & vertically in the available area */
-  z-index: 1;          /* above page bg, below any floating overlays you might have */
+  place-items: center;            /* center horizontally & vertically */
+  padding: var(--panel-pad);
+  z-index: 20;                    /* above page bg, below any modals you open */
+  pointer-events: auto;
 }
 
-/* The rectangle wrapper is exactly the image’s size */
-.rect-wrap {
+/* Wrapper takes only as much space as the rectangle (or its scaled size). */
+.chad-rect-wrap{
   position: relative;
   display: inline-block;
-  line-height: 0; /* remove inline gap */
+  line-height: 0;                 /* remove inline gap */
+  max-width: 100%;
+  max-height: 100%;
 }
 
-/* Keep the rectangle at intrinsic size (no scaling) */
-#rect {
+/* Show at real size unless it would overflow; then scale down to fit. */
+#chad-rect{
   display: block;
   width: auto;
   height: auto;
-  max-width: none;
-  max-height: none;
-  image-rendering: auto;
+  max-width: 100%;               /* prevents overflow horizontally */
+  max-height: 100%;              /* prevents overflow vertically   */
+  object-fit: contain;           /* preserve aspect if it scales   */
 }
 
 /* Icon buttons positioned over the rectangle */
-.icon-btn {
+.chad-icon-btn{
   position: absolute;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%,-50%);
   padding: 0;
   border: 0;
   background: none;
@@ -66,22 +65,22 @@ html, body {
   touch-action: manipulation;
 }
 
-.icon-btn img {
+.chad-icon-btn img{
   display: block;
   width: var(--icon-size);
   height: var(--icon-size);
   border-radius: 50%;
-  box-shadow: 0 6px 14px rgba(0, 0, 0, 0.35);
+  box-shadow: 0 6px 14px rgba(0,0,0,0.35);
 }
 
 /* Feedback */
-.icon-btn:active img { transform: scale(0.97); }
-.icon-btn:focus-visible img { outline: none; box-shadow: var(--focus-ring); }
+.chad-icon-btn:active img{ transform: scale(0.97); }
+.chad-icon-btn:focus-visible img{ outline: none; box-shadow: var(--focus-ring); }
 
-/* Center each icon in its third */
-.at-left   { left: 16.6667%; } /* 1/6 */
-.at-middle { left: 50%; }      /* 3/6 */
-.at-right  { left: 83.3333%; } /* 5/6 */
+/* Center each icon in its third (1/6, 3/6, 5/6) */
+.chad-at-left   { left: 16.6667%; }
+.chad-at-middle { left: 50%; }
+.chad-at-right  { left: 83.3333%; }
 
   :root{--muted:#9aa3ad;--border:rgba(255,255,255,.12);--glow:0 12px 40px rgba(91,140,255,.35)}
 
@@ -1372,28 +1371,29 @@ canvas{ display:block }
     </div>
 
 
- <!-- Full-screen stage ABOVE your bottom buttons -->
-  <section class="stage" aria-label="Three-option panel">
-    <div class="rect-wrap">
-      <!-- Grey rectangle at intrinsic size -->
-      <img id="rect" src="img/greyrectangle.png" alt="Three-section grey rectangle" />
 
-      <!-- Left: MAN -->
-      <button class="icon-btn at-left" data-id="man" aria-label="Man">
-        <img src="img/sharpjaw.png" alt="" />
-      </button>
+<!-- Put this near the end of your body (above your bottom buttons) -->
+<section class="chad-panel-slot" aria-label="Three-option panel">
+  <div class="chad-rect-wrap">
+    <img id="chad-rect" src="img/greyrectangle.png" alt="Three-section grey rectangle" />
 
-      <!-- Middle: STRAWBERRY -->
-      <button class="icon-btn at-middle" data-id="strawberry" aria-label="Strawberry">
-        <img src="img/strawberry.png" alt="" />
-      </button>
+    <!-- Left: MAN -->
+    <button class="chad-icon-btn chad-at-left" data-id="man" aria-label="Man">
+      <img src="img/sharpjaw.png" alt="" />
+    </button>
 
-      <!-- Right: THUNDERBOLT -->
-      <button class="icon-btn at-right" data-id="thunder" aria-label="Thunderbolt">
-        <img src="img/thunder.png" alt="" />
-      </button>
-    </div>
-  </section>
+    <!-- Middle: STRAWBERRY -->
+    <button class="chad-icon-btn chad-at-middle" data-id="strawberry" aria-label="Strawberry">
+      <img src="img/strawberry.png" alt="" />
+    </button>
+
+    <!-- Right: THUNDERBOLT -->
+    <button class="chad-icon-btn chad-at-right" data-id="thunder" aria-label="Thunderbolt">
+      <img src="img/thunder.png" alt="" />
+    </button>
+  </div>
+</section>
+
 
 
 
