--- a/index.html
+++ b/index.html
@@ -1059,7 +1059,7 @@ body{
 
 /* ORB */
 .orb{
-  width:250%; aspect-ratio:1/1; border-radius:50%; position:relative; z-index:40; cursor:pointer; transform: translateY(40px);
+  width:250%; aspect-ratio:1/1; border-radius:50%; position:relative; z-index:40; cursor:pointer; transform: translateY(-1cm);
   display:flex; align-items:center; justify-content:center; box-shadow:inset 0 -22px 70px rgba(0,0,0,0.52), 0 30px 100px rgba(0,0,0,0.64);
   background:radial-gradient(160% 140% at 50% 30%, #232325 0%, #0a0a0a 60%);
 }
